syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "domains/nutrition/models/ingredient.proto";

package domains.nutrition.proto;
option go_package = "github.com/kirvader/BodyController/domains/nutrition/proto";

service Nutrition {
	rpc GetIngredient(GetIngredientRequest) returns (GetIngredientResponse);
	rpc ListIngredients(ListIngredientsRequest) returns (ListIngredientsResponse);
}

message GetIngredientRequest {
	string ingredient_hex_id = 1;
};

message GetIngredientResponse {
	domains.nutrition.models.Ingredient ingredient = 1;
};

message ListIngredientsRequest {
	int32 page_size = 1;
	google.protobuf.StringValue last_page_token = 2;
};

message ListIngredientsResponse {
	repeated domains.nutrition.models.Ingredient ingredients = 1;
	google.protobuf.StringValue retrieved_page_token = 2;
};

