syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "domains/nutrition/models/recipe.proto";

package domains.nutrition.services.base.recipe;
option go_package = "github.com/kirvader/BodyController/domains/nutrition/services/base/recipe/proto";

service Recipe {
  	rpc CreateRecipe(CreateRecipeRequest) returns (CreateRecipeResponse);
	rpc DeleteRecipe(DeleteRecipeRequest) returns (DeleteRecipeResponse);
	rpc UpdateRecipe(UpdateRecipeRequest) returns (UpdateRecipeResponse);

	rpc GetRecipe(GetRecipeRequest) returns (GetRecipeResponse);
	rpc ListRecipes(ListRecipesRequest) returns (ListRecipesResponse);
}

message CreateRecipeRequest {
	domains.nutrition.models.Recipe recipe = 1;
};

message CreateRecipeResponse {
	string hex_id = 1;
};

message DeleteRecipeRequest {
	string hex_id = 1;
};

message DeleteRecipeResponse {};

message UpdateRecipeRequest {
	string hex_id = 1;
	domains.nutrition.models.Recipe new_recipe_info = 2;
};

message UpdateRecipeResponse {};

message GetRecipeRequest {
	string hex_id = 1;
};

message GetRecipeResponse {
	domains.nutrition.models.Recipe recipe = 1;
};

message ListRecipesRequest {
	int32 page_size = 1;
	google.protobuf.StringValue last_page_token = 2;
};

message ListRecipesResponse {
	repeated domains.nutrition.models.Recipe recipes = 1;
	google.protobuf.StringValue retrieved_page_token = 2;
};


